--- a/src/components/ItemDetailContainer/itemdetail.css
+++ b/src/components/ItemDetailContainer/itemdetail.css
@@ -53,7 +53,7 @@
   color: white;
 }
 .button-end-buy:hover{
-  border: 1px solid #2ECC71;
-  color: #2ECC71;
+  border: 1px solid #d7ff37;
+  color: #d7ff37;
   cursor: pointer;
 }
